package dmManifestDDF;

import "ddf/ddf_extensions.proto";
import "ddf/ddf_math.proto";

option java_package = "com.dynamo.manifest.proto";
option java_outer_classname = "dmManifest";

enum HashAlgorithm {
    HASH_MD5        = 0;
    HASH_SHA1       = 1;
    HASH_SHA256     = 2;
    HASH_SHA512     = 3;
}

enum SignAlgorithm {
    SIGN_RSA        = 0;
}

enum ResourceType {
    RESOURCE_UNKNOWN = 0;
    RESOURCE_SIMPLE = 1;
    RESOURCE_COMPLEX = 2;
}

message HashDigest {
    required int64          p1 = 1      [default = 0];
    optional int64          p2 = 2;
    optional int64          p3 = 3;
    optional int64          p4 = 4;
    optional int64          p5 = 5;
    optional int64          p6 = 6;
    optional int64          p7 = 7;
    optional int64          p8 = 8;
}

message ManifestHeader {
    required int32          magic_number = 1                [default = 0];
    required int32          version = 2                     [default = 0];
    required HashAlgorithm  resource_hash_algorithm = 3     [default = HASH_SHA256];
    required HashAlgorithm  signature_hash_algorithm = 4    [default = HASH_SHA256];
    required SignAlgorithm  signature_sign_algorithm = 5    [default = SIGN_RSA];
    required HashDigest     project_identifier = 6;
}

message ResourceEntry {
    repeated bytes          url = 1;
    required ResourceType   type = 2;
    required HashDigest     hash = 3;
    repeated HashDigest     dependants = 4;
}

message Signature {
    repeated bytes          data = 1;
}

message Manifest {
    required ManifestHeader     header = 1;
    repeated HashDigest         engine_versions = 2;
    repeated ResourceEntry      resources = 3;
    required Signature          signature = 4;
}